--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1,1 +1,172 @@
-/*# sourceMappingURL=main.css.map */
+.container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-73%, -50%);
+  display: flex;
+}
+.container__input {
+  display: block;
+  width: 350px;
+  height: 60px;
+  background-color: var(--white-button);
+  border: 1px solid transparent;
+  border-radius: 5px;
+  padding: 18px;
+  text-align: right;
+  font-size: 20px;
+  line-height: 24px;
+  color: var(--grey-text);
+  margin-left: 60px;
+}
+.container__input:focus, .container__input:hover {
+  outline: none;
+}
+.container__button {
+  display: block;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: transparent;
+  width: 60px;
+  height: 60px;
+  background-color: var(--grey-button);
+  border: transparent;
+  cursor: pointer;
+  color: rgba(111, 111, 111, 0.5);
+  font-size: 22px;
+  transition: 0.3s;
+  border-radius: 4px 0 0 4px;
+}
+.container__button:hover, .container__button:focus {
+  color: rgba(111, 111, 111, 0.9);
+}
+
+.container__list {
+  width: 410px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.container__item {
+  width: 50px;
+  height: 40px;
+  background-color: var(--grey-button);
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 400;
+  cursor: pointer;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  font-family: "Inter", sans-serif;
+  color: var(--grey-text);
+  transition: 0.3s;
+}
+.container__item:hover {
+  background-color: var(--grey-button-hover);
+}
+.container__item--number {
+  font-size: 26px;
+  line-height: 31px;
+  background-color: var(--white-button);
+}
+.container__item--number:hover {
+  background-color: var(--white-button-hover);
+}
+.container__item--equal {
+  font-size: 26px;
+  line-height: 31px;
+  background-color: var(--blue-button);
+  color: var(--white-button);
+}
+.container__item--equal:hover {
+  background-color: var(--blue-button-hover);
+}
+.container__item--input {
+  box-sizing: content-box;
+  display: block;
+  width: 410px;
+  height: 60px;
+  background-color: var(--grey-button);
+  border: 1px solid var(--grey-button);
+  position: relative;
+  top: -20px;
+}
+.container__item--input:hover, .container__item--input:focus {
+  background-color: var(--grey-button);
+}
+.container__item--clear {
+  width: 170px;
+}
+
+.opacity {
+  opacity: 0.4;
+}
+
+.history {
+  width: 300px;
+  margin-right: 40px;
+  margin-top: -20px;
+}
+
+.history__item {
+  font-size: 18px;
+  line-height: 15px;
+  color: rgba(111, 111, 111, 0.3);
+  margin-bottom: 16px;
+  text-align: right;
+}
+
+:root {
+  --grey-button: #e6e6e6;
+  --white-button: #fff;
+  --blue-button: #28bae8;
+  --grey-button-hover: #d7d7d7;
+  --white-button-hover: rgb(245, 245, 245);
+  --blue-button-hover: #1aa9d4;
+  --body-bg: #f8fbff;
+  --grey-text: #6f6f6f;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Raleway", sans-serif;
+  font-size: 20px;
+  background: var(--body-bg);
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+li,
+a {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  display: block;
+}/*# sourceMappingURL=main.css.map */
