--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -135,6 +135,10 @@
 
 * {
   box-sizing: border-box;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  -webkit-user-select: none;
 }
 
 html {
