--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -2,13 +2,13 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-73%, -50%);
+  transform: translate(-77%, -50%);
   display: flex;
 }
 .container__input {
   display: block;
-  width: 350px;
-  height: 60px;
+  width: 240px;
+  height: 50px;
   background-color: var(--white-button);
   border: 1px solid transparent;
   border-radius: 5px;
@@ -17,7 +17,7 @@
   font-size: 20px;
   line-height: 24px;
   color: var(--grey-text);
-  margin-left: 60px;
+  margin-left: 50px;
 }
 .container__input:focus, .container__input:hover {
   outline: none;
@@ -28,8 +28,8 @@
   top: 50%;
   transform: translateY(-50%);
   background-color: transparent;
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   background-color: var(--grey-button);
   border: transparent;
   cursor: pointer;
@@ -43,7 +43,8 @@
 }
 
 .container__list {
-  width: 410px;
+  width: 290px;
+  height: 320px;
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
@@ -90,18 +91,21 @@
 .container__item--input {
   box-sizing: content-box;
   display: block;
-  width: 410px;
-  height: 60px;
+  width: 290px;
+  height: 50px;
   background-color: var(--grey-button);
   border: 1px solid var(--grey-button);
   position: relative;
-  top: -20px;
+  margin-bottom: 10px;
 }
 .container__item--input:hover, .container__item--input:focus {
   background-color: var(--grey-button);
 }
 .container__item--clear {
-  width: 170px;
+  font-size: 10.4px;
+  line-height: 15px;
+  width: 110px;
+  padding: 14px;
 }
 
 .opacity {
@@ -110,18 +114,32 @@
 
 .history {
   width: 300px;
+  height: 320px;
   margin-right: 40px;
-  margin-top: -20px;
 }
 
 .history__item {
   font-size: 18px;
   line-height: 15px;
-  color: rgba(111, 111, 111, 0.3);
+  color: rgba(111, 111, 111, 0.8);
   margin-bottom: 16px;
   text-align: right;
 }
 
+.animate {
+  animation: animationOnMove 1s linear;
+}
+
+@keyframes animationOnMove {
+  0% {
+    margin-top: -31px;
+    opacity: 0%;
+  }
+  100% {
+    margin-top: 0px;
+    opacity: 100%;
+  }
+}
 :root {
   --grey-button: #e6e6e6;
   --white-button: #fff;
