--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -119,6 +119,9 @@
   width: 300px;
   height: 320px;
   margin-right: 40px;
+  @media screen and (max-width: 1000px) {
+    display: none;
+  }
 }
 .history__item {
   font-size: 18px;
