--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -117,6 +117,11 @@
   height: 320px;
   margin-right: 40px;
 }
+@media screen and (max-width: 1000px) {
+  .history {
+    display: none;
+  }
+}
 
 .history__item {
   font-size: 18px;
