--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -42,6 +42,9 @@
       color: rgba(111, 111, 111, 0.9);
     }
   }
+  @media screen and (max-width: 1000px) {
+    transform: translate(-50%, -50%);
+  }
 }
 .container__list {
   width: 290px;
